manifests/deluge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deluge
  name: deluge
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: deluge
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deluge
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - configMapRef:
                name: common-vars
                optional: false
            - configMapRef:
                name: deluge
                optional: false
          image: binhex/arch-delugevpn:2.0.5-1-04
          imagePullPolicy: IfNotPresent
          name: deluge
          ports:
            - containerPort: 8112
              name: http
              protocol: TCP
            - containerPort: 8118
              name: proxy
              protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              mountPropagation: None
              name: config
            - mountPath: /media
              mountPropagation: None
              name: media
            - mountPath: /torrents
              mountPropagation: None
              name: torrents
            - mountPath: /etc/localtime
              mountPropagation: None
              name: timezone
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/hostname: debian-storage
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /etc/localtime
            type: File
          name: timezone
        - hostPath:
            path: /media/Torrents
            type: Directory
          name: torrents
        - hostPath:
            path: /work/storage/configs/deluge
            type: Directory
          name: config
        - hostPath:
            path: /media
            type: Directory
          name: media
