manifests/generic-kuberouter-all-features.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
    labels:
        k8s-app: kube-router
        tier: node
    name: kube-router
    namespace: kube-system
spec:
    selector:
        matchLabels:
            k8s-app: kube-router
            tier: node
    template:
        metadata:
            labels:
                k8s-app: kube-router
                tier: node
        spec:
            priorityClassName: system-node-critical
            serviceAccountName: kube-router
            containers:
                - name: kube-router
                  image: docker.io/cloudnativelabs/kube-router@sha256:ef79fa26a7f64b1271a1954466770abf78b2484bcf2e5e8fca8551dc4425021f
                  imagePullPolicy: Always
                  args:
                      - --run-router=false
                      - --run-firewall=true
                      - --run-service-proxy=false
                      - --bgp-graceful-restart=true
                      - --kubeconfig=/var/lib/kube-router/kubeconfig
                      - --hairpin-mode
                      - --service-cluster-ip-range=10.43.0.0/16
                      - --service-external-ip-range=192.168.0.0/16
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: 20244
                      initialDelaySeconds: 10
                      periodSeconds: 3
                  resources:
                      requests:
                          cpu: 250m
                          memory: 250Mi
                  securityContext:
                      privileged: true
                  volumeMounts:
                      - name: lib-modules
                        mountPath: /lib/modules
                        readOnly: true
                      - name: cni-conf-dir
                        mountPath: /etc/cni/net.d
                      - name: kubeconfig
                        mountPath: /var/lib/kube-router
                        readOnly: true
                      - name: xtables-lock
                        mountPath: /run/xtables.lock
                        readOnly: false
            hostNetwork: true
            tolerations:
                - effect: NoSchedule
                  operator: Exists
                - key: CriticalAddonsOnly
                  operator: Exists
                - effect: NoExecute
                  operator: Exists
            volumes:
                - name: lib-modules
                  hostPath:
                      path: /lib/modules
                - name: cni-conf-dir
                  hostPath:
                      path: /etc/cni/net.d
                - name: kube-router-cfg
                  configMap:
                      name: kube-router-cfg
                - name: kubeconfig
                  hostPath:
                      path: /var/lib/kube-router
                - name: xtables-lock
                  hostPath:
                      path: /run/xtables.lock
                      type: FileOrCreate
