manifests/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: db
    name: db
    namespace: default
spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: db
    strategy:
        type: Recreate
    template:
        metadata:
            annotations:
                vault.security.banzaicloud.io/vault-tls-secret: vault-tls
                vault.security.banzaicloud.io/vault-env-from-path: secret/data/deploy/db-secrets
            labels:
                app: db
        spec:
            automountServiceAccountToken: true
            containers:
                - securityContext:
                      runAsUser: 999
                      runAsGroup: 999
                      runAsNonRoot: true
                      allowPrivilegeEscalation: false
                  image: mariadb:10.8.3@sha256:31b72b164a6bf86d6d0df3e27be53682742b6078188802fc3d974298129a77a4
                  imagePullPolicy: IfNotPresent
                  # livenessProbe: # TODO: this breaks a lot and I don't know why. Fix it soon
                  #     exec:
                  #         command:
                  #             - /vault/vault-env
                  #             - /bin/bash
                  #             - -c
                  #             - mysqlshow -u root -p$MYSQL_ROOT_PASSWORD
                  #     failureThreshold: 3
                  #     initialDelaySeconds: 5
                  #     periodSeconds: 15
                  #     successThreshold: 1
                  #     timeoutSeconds: 1
                  name: db
                  ports:
                      - containerPort: 3306
                        name: db
                        protocol: TCP
                  # readinessProbe:
                  #     exec:
                  #         command:
                  #             - /vault/vault-env
                  #             - /bin/bash
                  #             - -c
                  #             - mysqlshow -u root -p$MYSQL_ROOT_PASSWORD
                  #     failureThreshold: 3
                  #     initialDelaySeconds: 5
                  #     periodSeconds: 15
                  #     successThreshold: 1
                  #     timeoutSeconds: 1
                  resources:
                      limits:
                          cpu: '4'
                          memory: 512Mi
                      requests:
                          cpu: 100m
                          memory: 256Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  volumeMounts:
                      - mountPath: /var/lib/mysql/
                        mountPropagation: None
                        name: config
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            nodeSelector:
                kubernetes.io/hostname: debian-storage
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 30
            volumes:
                - hostPath:
                      path: /work/storage/configs/mysql/databases
                      type: Directory
                  name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: db
    port: 3306
    protocol: TCP
    targetPort: db
  selector:
    app: db
  sessionAffinity: None
  type: ClusterIP
