manifests/iotawatt.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: iotawatt
  labels:
    app: iotawatt
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.5.74
    ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: iotawatt
  labels:
    app: iotawatt
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  #type: ExternalName
  #externalName: iotawatt.local
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
