manifests/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: keycloak
    name: keycloak
    namespace: default
spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: keycloak
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            annotations:
                vault.security.banzaicloud.io/vault-tls-secret: vault-tls
                vault.security.banzaicloud.io/vault-env-from-path: secret/data/deploy/keycloak
            labels:
                app: keycloak
        spec:
            automountServiceAccountToken: true
            containers:
                - envFrom:
                      - configMapRef:
                            name: keycloak
                            optional: false
                  image: quay.io/keycloak/keycloak:18.0.2-legacy@sha256:656d9d75a73a7ed094e36c67682396b76a6524ebd173fa9c5ea70145119fa1ba
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      failureThreshold: 3
                      initialDelaySeconds: 30
                      periodSeconds: 10
                      successThreshold: 1
                      tcpSocket:
                          port: 8080
                      timeoutSeconds: 1
                  name: keycloak
                  ports:
                      - containerPort: 8080
                        name: http
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      initialDelaySeconds: 30
                      periodSeconds: 10
                      successThreshold: 1
                      tcpSocket:
                          port: 8080
                      timeoutSeconds: 1
                  resources:
                      limits:
                          cpu: '4'
                          memory: 2G
                      requests:
                          cpu: '1'
                          memory: 1300Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      privileged: false
                      readOnlyRootFilesystem: false
                      runAsGroup: 1000
                      runAsNonRoot: true
                      runAsUser: 1000
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: keycloak
  sessionAffinity: None
  type: ClusterIP
