manifests/prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prom
    app.kubernetes.io/instance: manifests
  name: prom
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: http
  selector:
    app: server
    app.kubernetes.io/instance: vm
    app.kubernetes.io/name: victoria-metrics-single
  sessionAffinity: None
  type: ClusterIP
