manifests/prom.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prom
  name: prom
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: http
      ports:
  selector: # We replace anything pointing at prom to VM-single instead
    app: server
    app.kubernetes.io/instance: vm
    app.kubernetes.io/name: victoria-metrics-single
  sessionAffinity: None
  type: ClusterIP
