manifests/vault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, DELETE, PATCH, OPTIONS
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: vault
  name: vault-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "vault.${vault:secret/data/deploy/domain#domain_name}"
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - "${vault:secret/data/deploy/domain#domain_name}"
        - "*.${vault:secret/data/deploy/domain#domain_name}"
      secretName: prod-cert
